[package]
name = "weoline"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Fast, cross-platform Claude Code statusline in Rust"
repository = "https://github.com/OverWeo/weoline"

[features]
default = ["usage-tracking"]
usage-tracking = ["dep:ureq", "dep:fd-lock"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
fd-lock = { version = "4", optional = true }

# Base declaration (no TLS)
[dependencies.ureq]
version = "3"
optional = true
default-features = false

# macOS & Windows: Use native-tls (OS TLS stack, smaller binary)
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies.ureq]
version = "3"
optional = true
default-features = false
features = ["native-tls"]

# Linux: Use rustls to avoid OpenSSL host dependency
[target.'cfg(target_os = "linux")'.dependencies.ureq]
version = "3"
optional = true
default-features = false
features = ["rustls"]

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
